[runtime] Add tests for concurrent hashtable.
Commit migrated from https://github.com/mono/mono/commit/9eeb7f1de0a09008ccb2c4967417b1f4a2d63267

--- a/src/mono/mono/unit-tests/Makefile.am
+++ b/src/mono/mono/unit-tests/Makefile.am
@@ -27,9 +27,14 @@ test_mono_linked_list_set_CFLAGS = $(TEST_CFLAGS)
 test_mono_linked_list_set_LDADD = $(TEST_LDADD)
 test_mono_linked_list_set_LDFLAGS = $(TEST_LDFLAGS)
 
-noinst_PROGRAMS = test-sgen-qsort test-gc-memfuncs test-mono-linked-list-set
+test_conc_hashtable_SOURCES = test-conc-hashtable.c
+test_conc_hashtable_CFLAGS = $(TEST_CFLAGS)
+test_conc_hashtable_LDADD = $(TEST_LDADD)
+test_conc_hashtable_LDFLAGS = $(TEST_LDFLAGS)
 
-TESTS = test-sgen-qsort test-gc-memfuncs test-mono-linked-list-set
+noinst_PROGRAMS = test-sgen-qsort test-gc-memfuncs test-mono-linked-list-set test-conc-hashtable
+
+TESTS = test-sgen-qsort test-gc-memfuncs test-mono-linked-list-set test-conc-hashtable
 
 endif SUPPORT_BOEHM
 endif !HOST_WIN32
