--- a/src/mono/configure.ac
+++ b/src/mono/configure.ac
@@ -2987,7 +2987,7 @@ case "$host" in
 	done
 	
 	if test "x$X11" = "xlibX11.so"; then
-		AC_MSG_WARN([Could not find X development libs. Do you have the -devel package installed? Assuming libX11.so.6...]);
+		AC_MSG_WARN([Could not find libX11.so. Do you have X.org or XFree86 installed? Assuming libX11.so.6...]);
 		X11=libX11.so.6
 	fi
 	AC_MSG_CHECKING(for the soname of libXinerama.so)
